# quant-navigator

./: .audit-ci.json  .coverage  .coverage-config.yaml  .dependency-cruiser.js  .dependency-update-config.json  .gitignore  .pre-commit-config.yaml  ADR.md  README.md  bandit-report.json  ci-architecture-fix-report.md  ci-assertion-fix-complete-report.md  ci-comprehensive-report.md  ci-comprehensive-test-report.md  ci-constitution-compliance-check.md  ci-constitution-fix-report.md  ci-environment-fix-report.md  ci-final-issues-report.md  ci-fix-progress-report.md  ci-fixture-fix-complete-report.md  ci-indent-fix-final-report.md  ci-remaining-issues-final-report.md  ci-remaining-issues-report.md  ci_impact_report.md  claims_validation_report.md  createTestWrapper-constitution-integration-report.md  docker-compose.test.yml  doubao_analyzer.py  env.development  env.test  fix_test_indentation.py  frontend-test-constitution-integration-final-report.md  frontend-test-fix-report.md  main_workflow.py  npm_audit_report_v13_11.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quant_signal_service_constitution_compliance_report.md  (+25 more)
.github/workflows/: ci.yml  dependency-update.yml  docs-quality-check.yml  docs.yml  docstring-quality-check.yml  e2e-tests.yml  pre-commit.yml  release.yml  status.yml
_archive_aigc_backend_nestjs/: package.json
_archive_backend_nestjs/: tsconfig.json
aigc/backend/: package.json
aigc/frontend/: package.json
apps/api/: package.json
apps/web/: package.json
archive/backend-legacy/: main.py  main_workflow.py  package.json  pyproject.toml
archive/backup/: Dockerfile.production  nginx.conf  package.json  vite.config.ts  智能分析系统统一开发文档.md
archive/frontend-aigc-backup-20250927/: .eslintrc.js  package.json  tsconfig.json
backend/: Dockerfile  package.json  tsconfig.json
backup/: package.json  tsconfig.json  vite.config.ts
config/: default.json  llm.service.json  quant_signal_config.py  settings.py
config/env/: env.example  env.production
data/performance/: performance_report_20250926.json
data_services/: requirements.txt
database/knowledge/: equity_investor_view_v1.0.txt
database/mdna/: 000001_平安银行_2023年年度报告.txt  000001_平安银行_2024年年度报告.txt  000002_万科A_2024年年度报告.txt  000008_神州高铁_2022年年度报告.txt  000008_神州高铁_2024年年度报告.txt  000009_中国宝安_2023年年度报告.txt  000010_美丽生态_2023年年度报告.txt  000011_深物业A_2023年年度报告.txt  000011_深物业A_2024年年度报告.txt  000012_南玻Ａ_2023年年度报告.txt  000014_沙河股份_2023年年度报告.txt  000016_深康佳Ａ_2022年年度报告.txt  000016_深康佳Ａ_2024年年度报告.txt  000017_深中华A_2023年年度报告.txt  000017_深中华A_2024年年度报告.txt  000019_深粮控股_2022年年度报告.txt  000019_深粮控股_2023年年度报告.txt  000021_深科技_2022年年度报告.txt  000021_深科技_2024年年度报告.txt  000025_特力Ａ_2022年年度报告.txt  000026_飞亚达_2023年年度报告.txt  000027_深圳能源_2022年年度报告.txt  000027_深圳能源_2023年年度报告.txt  000028_国药一致_2024年年度报告.txt  000030_富奥股份_2022年年度报告.txt  000031_大悦城_2022年年度报告.txt  000032_深桑达Ａ_2022年年度报告.txt  000034_神州数码_2024年年度报告.txt  000037_深南电A_2024年年度报告.txt  000039_中集集团_2023年年度报告.txt  (+5607 more)
docs/: ADR.md  AI治理中心(AIGC)功能开发状态报告.md  API_CHANGELOG.md  DEPENDENCY_MANAGEMENT_STRATEGY.md  E2E测试人工仲裁指南.md  E2E测试策略.md  FastAPI测试工具迁移报告.md  LINTING_PHILOSOPHY.md  NestJS到FastAPI迁移完成报告.md  README.md  Sprint1_完成报告.md  TDD依赖管理工具开发报告.md  docstring规范.md  legacy-reference-guide.md  v11_9_week1_completion_summary.md  v11_9_week2_completion_summary.md  v13.1_架构重构_量化导航仪后端Python全栈迁移计划.md  v13.1_第一阶段完成报告.md  v13.1_第三阶段完成报告.md  v13.1_第四阶段完成报告.md  v13.2_战略升级完成报告.md  v13.2_最终清理完成报告.md  v13.3_Monorepo结构优化完成报告.md  v13.3_Monorepo结构优化计划.md  v13.3_YAGNI原则与契约管理完成报告.md  v13.3_最终完善报告.md  v13.4_YAGNI平衡法则建立完成报告.md  v13.4_架构修正完成报告.md  v13.8.1_Ruff判例法建立完成报告.md  v13.8_文档导航建立完成报告.md  v13.8_文档更新完成报告.md  v13.8_文档重复检查与整理报告.md  v13.8_极简主义质量保证完成报告.md  依赖更新策略.md  前端测试修复指南.md  开发文档第0章-开发流程准则.md  开发文档第1章-系统概述.md  开发文档第2章-核心功能模块-上.md  开发文档第2章-核心功能模块-下.md  开发文档第3章-数据库设计.md  (+25 more)
docs_migration_staging/: 分类报告.md  文档整合到代码报告.md
frontend/: Dockerfile  README.md  nginx.conf  package.json
scripts/: create-system-configs-table.js  deploy-v10.5.sh  migrate-database-v10.5.js  migrate-database.js  migrate-tests.sh  quick-dev-test.js  start_development.sh  start_production.sh  test_attribution_engine.py  test_database_migration.py  test_prediction_engine.py  test_sprint1.sh  update_docs_index.py  update_docs_index.sh  validate_config.py  verify_database_merge.js
support_modules/: data_pipeline.py
test-results/: .last-run.json
tests/: conftest.py  jest.config.js  package.json  simple-test.spec.ts  test-dependencies.js  test_arbitration_preprocessor.py  tsconfig.json
(+13447 files in other folders)
