[tool.poetry]
name = "quant-navigator-monorepo"
version = "13.3.0"
description = "量化导航仪 Monorepo - 统一依赖管理"
authors = ["Quant Navigator Team <dev@quant-navigator.com>"]
readme = "README.md"
packages = [
    {include = "packages/backend-python/src", from = "."},
    {include = "packages/shared-types", from = "."},
    {include = "tools", from = "."},
    {include = "libs", from = "."}
]

[tool.poetry.dependencies]
python = "^3.9"
# 核心 Web 框架
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
granian = "^0.15.0"
starlette = "^0.27.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.11.0"

# 数据库和 ORM
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.30.0"

# 数据科学和机器学习
pandas = "^2.3.0"
numpy = "^1.26.0"
scikit-learn = "^1.7.0"
lightgbm = "^4.6.0"
scipy = "^1.16.0"
statsmodels = "^0.14.0"
sympy = "^1.14.0"
networkx = "^3.5.0"
patsy = "^1.0.0"
joblib = "^1.5.0"
threadpoolctl = "^3.6.0"

# 金融数据
tushare = "^1.4.0"

# LLM 和 AI 服务
openai = "^1.109.0"
anthropic = "^0.7.0"
httpx = "^0.27.0"
httpcore = "^1.0.0"
huggingface-hub = "^0.35.0"
tokenizers = "^0.22.0"

# 后台任务和缓存
arq = "^0.25.0"
redis = "^6.4.0"

# HTTP 和网络
requests = "^2.32.0"
aiohttp = "^3.9.0"
websocket-client = "^1.8.0"

# 配置和序列化
PyYAML = "^6.0.0"
python-dotenv = "^1.1.0"
jsonschema = "^4.25.0"

# 数据处理
beautifulsoup4 = "^4.13.0"
lxml = "^6.0.0"
rich = "^14.1.0"

# 因果推理
dowhy = "^0.8.0"

# 类型检查
typing-extensions = "^4.15.0"
typing-inspection = "^0.4.0"

# 项目内部依赖
quant-navigator-shared-types = {path = "packages/shared-types", develop = true}

[tool.poetry.group.dev.dependencies]
# 测试框架
pytest = "^8.4.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
coverage = "^7.10.0"

# 代码质量
ruff = "^0.13.0"
black = "^25.9.0"
isort = "^6.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.0"

# 安全扫描
bandit = "^1.7.0"
safety = "^2.3.0"

# 开发工具
pre-commit = "^4.3.0"
virtualenv = "^20.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# 开发脚本
dev = "scripts/start_development.sh"
start = "scripts/start_production.sh"
test = "pytest"
test-cov = "pytest --cov=packages/backend-python/src"
lint = "ruff check ."
format = "ruff format ."
check = "ruff check ."

# 依赖管理脚本
deps-install = "python tools/scripts/dependency-manager.py --install"
deps-update = "python tools/scripts/dependency-manager.py --update"
deps-audit = "python tools/scripts/dependency-manager.py --audit"

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=packages/backend-python/src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests"
]

[tool.coverage.run]
source = ["packages/backend-python/src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/node_modules/*"
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
